Fixed Spacing

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -372,15 +372,18 @@
 
 .section_5 {
     padding-bottom: 100px;
+    overflow: hidden;
 }
 
 .section_5 .image_grid {
     position: relative;
     width: 100%;
-    padding: 30px 20px 0;
+    padding: 30px 0px 0;
+    margin: auto;
 }
 
 .section_5 .project {
+    overflow: hidden;
     position: relative;
     display: block;
     padding: 0px !important;
